<resources>
    <string name="login_mensaje">Iniciar Sesion </string>
    <string name="login_usuario">Usuario </string>
    <string name="login_clave">Contraseña </string>
    <string name="app_name">Peluqueria</string>
    <string name="login_salir">Salir</string>
    <string name="login_volver">Volver</string>
    <string name="login_confirmar">Confirmar clave</string>
    <string name="login_form">Formulario de registro</string>
    <string name="login_cuenta">Crear mi cuenta</string>
    <string name="title_activity_menu_activity">menu_activity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Instruccciones</string>
    <string name="tab_text_3">Actividad</string>
    <string name="tab_text_4">Personal</string>
    <string name="listado_del_personal">Listado del personal</string>
    <string name="signo_mas">Agregar un nuevo personal</string>


    <string name="title_activity_inicio_menu">Inicio_menu</string>
    <string name="title_activity_principal_activitty">PrincipalActivitty</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Fragmento </string>

    <string-array name="fragments">
        <item>Personal</item>
        <item>Actividades</item>
        <item>Cerrar Sesion</item>
        <item>Salir</item>
    </string-array>

    <string name="Crear">Agregar registro</string>
    <string name="formulario_personal">Formulario personal</string>
    <string name="Recordar">Recordar credenciales</string>
    <string name="cerrar_sesion">Cerrar sesion</string>
    <string name="asignar_actividad">Asignar actividades</string>
    <string name="actividades">Actividades</string>
    <string name="lista_personal">Lista personal</string>
    <string name="crear_usuario">Crear usuario</string>
    <string name="salir">Salir</string>


    <string name="formulario_actividades">Formulario actividades</string>
    <string name="Actividad">Actividad</string>
    <string name="Precio">Precio</string>
    <string name="hora_inicio">Hora de inicio</string>
    <string name="hora_fin">Hora fin</string>
    <string name="precio">Precio</string>
    <string name="fecha">Fecha</string>
    <string name="crear_actividad">Crear actividad</string>
    <string name="actualizar">Actualizar</string>
    <string name="listaDeactividades">Lista de actividades</string>
    <string name="asignarActividad">Asignar actividad</string>


    <!-- String para formularios de registro personal -->
    <string name="Nombre">Nombre</string>
    <string name="Cedula">Cedula</string>
    <string name="Edad">Edad</string>
    <string name="Telefono">Telefono</string>
    <string name="Guardar">Guardar</string>
    <string name="descripcion">Imagen_item</string>
    <string name="editar">Editar</string>
    <string name="Id">Id</string>
    <string name="eliminar">Eliminar</string>
    <string name="seleccionePersona">Seleccion una persona</string>
    <string name="seleccionActividad">Seleccion una actividad</string>
    <string name="formularioAsignar">Asignar actividad a una persona</string>
    <string name="mensaje_guardar">Registro guardado</string>

    <!-- String para formulario de registro actividades -->


</resources>