<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:layout_margin="10dp"
    android:orientation="vertical"
    tools:context=".Activities.DetallePersonal">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            app:srcCompat="@drawable/descarga"
            android:contentDescription="@string/login_mensaje"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_form"
            android:textAlignment="center"
            android:textColor="@android:color/holo_blue_dark"
            android:ems="15"
            android:paddingBottom="20dp"/>


        <TextView
            android:id="@+id/nombre_editar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="20"
            android:text="@string/Nombre"

            android:textColor="@android:color/holo_blue_dark" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editar_nombre"
            android:textColor="@android:color/black"
            android:inputType="text"

            />

        <TextView
            android:id="@+id/tw_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="20"
            android:text="@string/Cedula"

            android:textColor="@android:color/holo_blue_dark" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="@android:integer/config_longAnimTime"
            android:id="@+id/editar_cedula"
            android:textColor="@android:color/black"
            android:layout_marginBottom="10dp"
            android:inputType="text"

            />

        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="20"
            android:text="@string/Telefono"

            android:textColor="@android:color/holo_blue_dark" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editar_telefono"
            android:textColor="@android:color/black"
            android:layout_marginBottom="10dp"
            android:inputType="text"

            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="20"
            android:text="@string/Edad"
            android:textColor="@android:color/holo_blue_dark" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editar_edad"
            android:digits="0123456789"
            android:textColor="@android:color/black"
            android:layout_marginBottom="10dp"
            android:inputType="number"
            />



    </LinearLayout>

        <Button

            android:layout_gravity="center"
            android:layout_width="350dp"
            android:layout_margin="10dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn_editar_personal"
            android:text="@string/editar"
            android:textColor="@android:color/white"
            android:background="@android:color/holo_blue_dark"
            />


        <Button
            android:layout_gravity="center"
            android:layout_width="350dp"
            android:layout_margin="10dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn_eliminar_personal"
            android:text="@string/eliminar"
            android:textColor="@android:color/white"
            android:background="@android:color/holo_red_dark"/>

        <Button
            android:layout_gravity="center"
            android:layout_width="350dp"
            android:layout_margin="10dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn_volver_lista"
            android:text="@string/login_volver"
            android:textColor="@android:color/white"
            android:background="@android:color/holo_green_light"/>




</LinearLayout>