<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white"
    android:layout_height="match_parent"
    tools:context=".Activities.DetalleActividad">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/descarga"
            android:contentDescription="@string/login_mensaje"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/formulario_actividades"
            android:textAlignment="center"
            android:textColor="@android:color/holo_blue_dark"
            android:ems="15"
            android:paddingBottom="20dp"/>


        <TextView
            android:id="@+id/tw_usuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="20"
            android:text="@string/Actividad"

            android:textColor="@android:color/holo_blue_dark" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editarActividad"
            android:textColor="@android:color/black"
            android:inputType="text"

            />

        <TextView
            android:id="@+id/tw_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="20"
            android:text="@string/fecha"

            android:textColor="@android:color/holo_blue_dark" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="@android:integer/config_longAnimTime"
            android:id="@+id/editarFecha"
            android:textColor="@android:color/black"
            android:layout_marginBottom="10dp"
            android:inputType="text"

            />

        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="20"
            android:text="@string/hora_inicio"
            android:textColor="@android:color/holo_blue_dark" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editarHoraInicio"
            android:textColor="@android:color/black"
            android:layout_marginBottom="10dp"
            android:inputType="text"

            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="20"
            android:text="@string/hora_fin"
            android:textColor="@android:color/holo_blue_dark" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editarHoraFin"
            android:textColor="@android:color/black"
            android:layout_marginBottom="10dp"
            android:inputType="text"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="20"
            android:text="@string/precio"
            android:textColor="@android:color/holo_blue_dark" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editarPrecio"
            android:textColor="@android:color/black"
            android:layout_marginBottom="10dp"
            android:inputType="text"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">


            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_editar_actividad"
                android:text="@string/Guardar"
                android:textColor="@android:color/white"
                android:background="@android:color/holo_blue_dark"
                />

            <Button
                android:layout_marginStart="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_eliminar_actividad"
                android:text="@string/eliminar"
                android:textColor="@android:color/white"
                android:background="@android:color/holo_red_dark"
                />

        </LinearLayout>


    </LinearLayout>


</LinearLayout>